--- a/11_pruebas/6_css grid layout/estilos.css
+++ b/11_pruebas/6_css grid layout/estilos.css
@@ -6,6 +6,10 @@ body{
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
+body h2{
+    text-align: center;
+}
+
 /*style the header*/
 header{
     background-color: #7A4069;
@@ -17,10 +21,11 @@ header{
 
 /*Create two columns next to each other*/
 nav{
+    float: left;
     background: #FFC18E;
     padding: 20px;
-    float: left;
     width: 30%;
+    height: 247px;
 }
 
 /*Styling the list inside the menu*/
@@ -34,4 +39,30 @@ article{
     padding: 20px;
     width: 70%;
     background-color: #B7D3DF;
+    height: 247px;
 }
+
+
+section::after {
+    content: "";
+    display: table;
+    clear: both;
+}
+
+/*Styling the footer*/
+footer {
+    background-color: #94B49F;
+    padding:10px;
+    text-align: center;
+    color: white;
+    font-size: 30px;
+}
+
+/*Responsive design*/
+@media (max-width: 600px) {
+    nav, article{
+        width: 100%;
+        height: auto;
+    }
+}
+
