--- a/11_pruebas/7_encabezadoResponsive/estilos.css
+++ b/11_pruebas/7_encabezadoResponsive/estilos.css
@@ -1,14 +1,47 @@
+body{
+    margin: 0;
+}
+
+a{
+  text-decoration: none;  
+  color: black;
+}
+
 header{
     display: flex;
     justify-content: space-between;
-    height: 80px;
+    min-height: 80px;
     background-color: #B2C8DF;
+    padding: 10px;
+    align-items: center;
 }
 
 .logo{
     display: flex;
+    align-items: center;
 }
 
 .logo img{
     height: 70px;
+    margin-right: 10px;
+}
+
+nav a{
+    font-weight: 600;
+    padding-right: 10px;
+}
+
+nav a:hover{
+    color: white;
+}
+
+@media (max-width:700px) {
+    header{
+        flex-direction: column;
+    }
+
+    nav{
+        padding: 10px 10px;
+    }
+    
 }
