--- a/11_pruebas/login_prueba/css/estilos.css
+++ b/11_pruebas/login_prueba/css/estilos.css
@@ -14,115 +14,68 @@ body {
     font-family: "Poppins";
 }
 
-.container {
+.login-content {
     width: 450px;
-    padding: 20px;
+    padding: 10px;
     border-radius: 15px;
     background: white;
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 15px;
-    margin: auto;
-    margin-top: 30px;
+    margin: 100px auto;
 }
 
-h1 {
+.login-content__img {
+    width: 120px;
+}
+
+.login-content__title {
     color: #607d8b;
     font-size: 38px;
+    margin-bottom: 1em;
 }
 
-img {
-    height: 120px;
-
-}
-
-form {
+.login-content__form {
     display: flex;
     flex-direction: column;
+    align-items: center;
     gap: 15px;
-    width: 100%;
+
 }
 
-.form__div {
-    width: 100%;
-    border: solid 1px rgb(145, 145, 145);
-    padding: 10px 25px;
-    border-radius: 20px;
+.login-content__form__item__group {
+    display: flex;
 }
 
-input {
-    /* border: none; */
-    /* outline: none; */
+.login-content__form__item__group__name {
+    margin-left: 10px;
+}
+
+.login-content__form__item__input {
+    border: 1px solid;
+    outline: none;
     border-radius: 10px;
     padding: 10px;
 }
 
-input:focus {
+.login-content__form__item__input:focus {
     background: #d0e4ee;
 }
 
-.campo {
-    border: #000;
-}
-
-span {
-    color: rgb(145, 145, 145);
-}
-
-button {
-    width: 100%;
+.login-content__form__button-login {
     padding: 15px 15px;
     background: #7ac0e4;
     border: none;
-    font-size: 16px;
+    font-size: 14px;
+    font-weight: bold;
+    color: black;
     border-radius: 20px;
     cursor: pointer;
 }
 
-button:hover {
+.login-content__form__button-login:hover {
     background: #619ebd;
 }
-
-.enlace {
-    text-align: center;
-    font-size: 14px;
-    color: black;
-    text-decoration: none;
-}
-
-.form__group__enlace {
-    text-align: center;
-}
-
-hr {
-    width: 100%;
-}
-
-p {
-    text-align: center;
-    font-size: 14px;
-}
-
-.div__group {
-    display: flex;
-    gap: 20px;
-}
-
-.redes {
-    width: 60px;
-    height: 60px;
-    background: rgb(85, 139, 160);
-    padding: 10px;
-    border-radius: 50%;
-    font-size: 20px;
-    color: wheat;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-decoration: none;
-}
-
 
 @media screen and (max-width:500px) {
     body {
